Spacing Fixed. Some JS done.

--- a/custom.css
+++ b/custom.css
@@ -54,7 +54,7 @@ body {
   font-family: PopBlack;
 }
 .fill {
-  height: 50vh;
+  height: 40vh;
 }
 /*           */
 /*  2nd page */
